======= Change History ========

- New: Added new flag CR_INST_AUTO_THREAD_HANDLERS allowing to 
       install/uninstall exception handlers automatically in DllMain() 
       on DLL_THREAD_ATTACH/DETACH (issue 185).

- New: adjusting dump privileges to avoid error 'Only part of a ReadProcessMemory
       or WriteProcessMemory request was completed.'

- Fixed: Screenshot file still sent even if deleted (issue 186).
- Fixed: Video division by zero (issue 189)
- Fixed: Video missing from report (issue 187)
- Fixed: No crash data is sent to URL when we have a redirect (Issue 191)
- Fixed: CCrashHandler.m_hWndVideoParent not initialized to a 
         default value (issue 195)


--- Ver. 1.4.1 ---

- New: Added an ability to preview OGG video files in Error Report Details dialog.
       To preview a file, select it in the list of files.

- New: Added an bility for end user to delete screenshots, registry keys and video file
       from crash report through context menu of Error Report Details dialog 
       (added CR_AS_ALLOW_DELETE flag for crAddScreenshot2() function,
        CR_AR_ALLOW_DELETE flag for crAddRegKey() function and CR_AV_ALLOW_DELETE
        flag for crAddVideo() function). (issue 183) 

- New: Added back the crExceptionFilter() function removed previously as deprecated. 
       It seems that some users require that function. (issue 175).

- New: Extended unit tests (added ExceptionHandlerTests) (issue 114)

- Fixed: Exception handling problems (issue 180)
- Fixed: Update italian language file (issue 174)
- Fixed again: HTTPS certificate problem (issue 151)
- Fixed: Custom property cleared by adding other property (issue 176)
- Fixed: Running crprober on windows 7 results in no stack trace output (issue 182)


--- Ver. 1.4.0 ---

- New: CrashRpt is now able to capture end user's desktop and record what happened 
       just before crash to an .ogg video file and include the file to crash report. 