@@ -31,7 +31,7 @@ PROJECT_NAME           = CrashRpt
 # This could be handy for archiving the generated documentation or
 # if some version control system is used.
 
-PROJECT_NUMBER         = 1.4.1
+PROJECT_NUMBER         = 1.4.2
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute)
 # base path where the generated documentation will be put.
