@@ -972,7 +972,7 @@ crUninstallFromCurrentThread();
 * 
 *  \return This function returns zero if succeeded.
 *
-*  \param[in] pszFile     Absolute path to the file to add, required.
+*  \param[in] pszFile     Absolute path to the file (or file search pattern) to add to crash report, required.
 *  \param[in] pszDestFile Destination file name, optional.
 *  \param[in] pszDesc     File description (used in Error Report Details dialog), optional.
 *  \param[in] dwFlags     Flags, optional.
@@ -982,24 +982,27 @@ crUninstallFromCurrentThread();
 *  
 *    When this function is called, the file is marked to be added to the error report, 
 *    then the function returns control to the caller.
-*    When crash occurs, all marked files are added to the report by the \b CrashSender.exe process. 
-*    If a file is locked by someone for exclusive access, the file won't be included. Inside of \ref PFNCRASHCALLBACK() crash callback, 
+*    When a crash occurs, all marked files are added to the report by the \b CrashSender.exe process. 
+*    If a file is locked by someone for exclusive access, the file won't be included. 
+*    Inside of \ref PFNCRASHCALLBACK() crash callback, 
 *    close open file handles and ensure files to be included are acessible for reading.
 *
-*    \a pszFile should be a valid absolute path of a file to add to crash report. 
+*    \a pszFile should be either a valid absolute path to the file or a file search 
+*    pattern (e.g. "*.log") to be added to crash report. 
 *
 *    \a pszDestFile should be the name of destination file. This parameter can be used
 *    to specify different file name for the file in ZIP archive. If this parameter is NULL, the pszFile
-*    file name is used as destination file name.
+*    file name is used as destination file name. If \a pszFile is a search pattern, this argument
+*    is ignored.
 *
-*    \a pszDesc is a literal description of a file. It can be NULL.
+*    \a pszDesc is a short description of the file. It can be NULL.
 *
 *    \a dwFlags parameter defines the behavior of the function. This can be a combination of the following flags:
-*       - \ref CR_AF_TAKE_ORIGINAL_FILE  On crash, the \b CrashSender.exe will try to locate the file from its original location. This behavior is the default one.
-*       - \ref CR_AF_MAKE_FILE_COPY      On crash, the \b CrashSender.exe will make a copy of the file and save it to the error report folder.  
+*       - \ref CR_AF_TAKE_ORIGINAL_FILE  On crash, the \b CrashSender.exe process will try to locate the file from its original location. This behavior is the default one.
+*       - \ref CR_AF_MAKE_FILE_COPY      On crash, the \b CrashSender.exe process will make a copy of the file and save it to the error report folder.  
 *
 *       - \ref CR_AF_FILE_MUST_EXIST     The function will fail if file doesn't exist at the moment of function call (the default behavior). 
-*       - \ref CR_AF_MISSING_FILE_OK     Do not fail if file is missing (assume it will be created later).
+*       - \ref CR_AF_MISSING_FILE_OK     The function will not fail if file is missing (assume it will be created later).
 *
 *       - \ref CR_AF_ALLOW_DELETE        If this flag is specified, the user will be able to delete the file from error report using context menu of Error Report Details dialog.
 *
@@ -1007,6 +1010,8 @@ crUninstallFromCurrentThread();
 *    (if you specify \ref CR_INST_SEND_QUEUED_REPORTS flag) 
 *    you must also specify the \ref CR_AF_MAKE_FILE_COPY as \a dwFlags parameter value. This will
 *    guarantee that a snapshot of your file at the moment of crash is taken and saved to the error report folder.
+*    The error report folder is a folder where files included into the crash report are stored
+*    until they are sent to recipient.
 *
 *    This function fails if \a pszFile doesn't exist at the moment of function call, 
 *    unless you specify \ref CR_AF_MISSING_FILE_OK flag. 
@@ -1015,6 +1020,32 @@ crUninstallFromCurrentThread();
 *    versions of crAddFile2() function. The crAddFile2() macro defines character set
 *    independent mapping.
 *
+*  Usage example:
+*
+*  \code
+*
+*  // Add the error.log file to crash report. At the moment of crash, 
+*  // the file will be copied to crash report folder. The end user 
+*  // will be able to delete the file using CrashRpt GUI.
+*  int nResult = crAddFile2(
+*             _T("C:\\Program Files (x86)\MyApp\\error.log"), 
+*             _T("error.log"), 
+*             _T("Log file"), 
+*             CR_AF_MAKE_FILE_COPY|CR_AF_ALLOW_DELETE);
+*  if(nResult!=0)
+*  {
+*    // Get the status message
+*    TCHAR szErrorMsg[256];
+*    crGetLastErrorMsg(szErrorMsg, 256);
+*  }
+*
+*  // Add all *.txt files found in the folder. At the moment of crash, 
+*  // the file(s) will be copied to crash report folder. The end user 
+*  // won't be able to delete the file(s).
+*  crAddFile2(_T("C:\\Program Files (x86)\MyApp\\*.txt"), 
+*      NULL, _T("TXT file"), CR_AF_MAKE_FILE_COPY);
+*
+*  \endcode
 *
 *  \sa crAddFile2W(), crAddFile2A(), crAddFile2()
 */
